# tetris

./: NOTICE  README.md  tetris.cabal
src/: Tetris.hs
src/Tetris/: Action.hs  Block.hs  Board.hs  Coord.hs  Game.hs  Orientation.hs
src/Tetris/Block/: Coords.hs  Dir.hs  Shape.hs
src/Tetris/UI/: NCurses.hs
test/Tetris/: BoardSpec.hs
