name: tetris
version: 0.1
cabal-version: >= 1.10
build-type:       Simple

Executable tetris
  Main-is:          Tetris.hs
  ghc-options:      -Wall
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:    base
                  , containers
                  , ghc-prim
                  , hscurses
                  , lens
                  , mtl
                  , random
                  , Stream
                  , transformers

library
  hs-source-dirs: src
  exposed-modules: Tetris.Board
                 , Tetris.Coord
  ghc-options: -Wall 
  default-language: Haskell2010
  build-depends: base
               , containers
               , ghc-prim
               , lens

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends:    array
                  , base
                  , containers
                  , hscurses
                  , hspec
                  , ghc-prim
                  , hscurses
                  , lens
                  , mtl
                  , QuickCheck
                  , random
                  , Stream
                  , tetris
                  , transformers
